RESOLVED FIXED186162
DFGArrayModes needs to know more about CoW arrays
https://bugs.webkit.org/show_bug.cgi?id=186162
Summary DFGArrayModes needs to know more about CoW arrays
Keith Miller
Reported 2018-05-31 14:33:40 PDT
DFGArrayModes needs to know more about CoW arrays
Attachments
Patch (18.41 KB, patch)
2018-05-31 14:58 PDT, Keith Miller
fpizlo: review+
Keith Miller
Comment 1 2018-05-31 14:58:53 PDT
Keith Miller
Comment 2 2018-05-31 14:59:27 PDT
This fixes the base64 regression from the first CoW patch.
Keith Miller
Comment 3 2018-05-31 16:50:22 PDT
Radar WebKit Bug Importer
Comment 4 2018-05-31 16:53:21 PDT
Dawei Fenton (:realdawei)
Comment 5 2018-06-08 09:47:12 PDT
After https://trac.webkit.org/changeset/232376 the following test has been failing quite frequently on macOS Wk2 Debug: Test Name: inspector/console/webcore-logging.html Flakiness Dashboard: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=inspector%2Fconsole%2Fwebcore-logging.html Sample stdio: https://build.webkit.org/builders/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/builds/3602/steps/layout-test/logs/stdio Sample Diff: --- /Volumes/Data/slave/highsierra-debug-tests-wk2/build/layout-test-results/inspector/console/webcore-logging-expected.txt +++ /Volumes/Data/slave/highsierra-debug-tests-wk2/build/layout-test-results/inspector/console/webcore-logging-actual.txt @@ -33,6 +33,7 @@ -- Running test case: Console.Logging.LogAsJSONWithoutRepeat PASS: Media logging disabled. PASS: Verbose media logging has been enabled. +ERROR: TypeError: undefined is not an object (evaluating 'listener.call') PASS: Message logged as JSON. PASS: ConsoleMessage repeatCount is 1. PASS: Message logged as JSON.
Dawei Fenton (:realdawei)
Comment 6 2018-06-08 11:16:25 PDT
I've been able to reproduce the failure on a local build of r232376 using the following command: run-webkit-tests inspector/console/webcore-logging.html --debug --iter 50 -f -g --no-retry The test passes reliably on the previous build (r232375)
Note You need to log in before you can comment on or make changes to this bug.